[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unlimited_void"
version = "0.0.1"

dependencies = ["torch>=2.0.0", "numpy", "flask", "requests"]

[tool.setuptools]
packages = ["Unlimited_Void"]
zip-safe = false
include-package-data = true